src/nl/hannahsten/texifyidea/grammar/Bibtex.bnf
{
    parserClass="nl.hannahsten.texifyidea.parser.BibtexParser"

    extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

    psiClassPrefix="Bibtex"
    psiImplClassSuffix="Impl"
    psiPackage="nl.hannahsten.texifyidea.psi"
    psiImplPackage="nl.hannahsten.texifyidea.psi.impl"
    psiImplUtilClass="nl.hannahsten.texifyidea.psi.BibtexPsiImplUtil"

    elementTypeHolderClass="nl.hannahsten.texifyidea.psi.BibtexTypes"
    elementTypeClass="nl.hannahsten.texifyidea.index.stub.BibtexIdStubElementType"
    tokenTypeClass="nl.hannahsten.texifyidea.psi.BibtexTokenType"

    extends("id")="com.intellij.extapi.psi.StubBasedPsiElementBase<nl.hannahsten.texifyidea.index.stub.BibtexEntryStub>"
    implements("id")="com.intellij.psi.PsiNamedElement"
}

bibtexFile ::= (entry | comment)*

entry ::= type (OPEN_BRACE | OPEN_PARENTHESIS) (id? entry_content | preamble) comment* endtry comment* SEPARATOR?

entry_content ::= tag (SEPARATOR tag)* SEPARATOR?

endtry ::= SEPARATOR? comment* (CLOSE_BRACE | CLOSE_PARENTHESIS)

type ::= TYPE_TOKEN

preamble ::= (quoted_string (CONCATENATE quoted_string)+) | quoted_string | NUMBER | IDENTIFIER

id ::= comment* IDENTIFIER comment* SEPARATOR {
    stubClass="nl.hannahsten.texifyidea.index.stub.BibtexIdStub"
    mixin="nl.hannahsten.texifyidea.psi.BibtexIdImplMixin"
}

tag ::= comment* key comment* ASSIGNMENT comment* content comment*

key ::= IDENTIFIER

content ::= (string (CONCATENATE string)+) | string | NUMBER | IDENTIFIER

string ::= defined_string | quoted_string | braced_string

defined_string ::= IDENTIFIER {
    methods=[getReference]
}

quoted_string ::= QUOTES normal_text? END_QUOTES

braced_string ::= OPEN_BRACE normal_text+ CLOSE_BRACE

comment ::= COMMENT_TOKEN

normal_text ::= NORMAL_TEXT_WORD+
